configurando o HTML do projeto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <script src="app.js" defer></script>
 </head>
 <body>
-    <h1>Newsletter</h1>
+    <header class="topo">
+        <div class="container">
+            <strong>Newsletter</strong>
+            <button id="btn-tema" class="btn">Alternar Tema</button>
+        </div>
+    </header>
+    <main class="contanier">
+        <section class="caixa">
+            <h1>Inscreva-se</h1>
+            <p>Receba novidades no seu e-mail, sem spam!</p>
+
+            <form method="post">
+                <label for="nome">Nome</label>
+                <input type="text" name="nome" id="nome" placeholder="Seu nome">
+
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" placeholder="nome@email.com">
+
+                <button type="submit" class="btn primario">Quero receber</button>
+            </form>
+        </section>
+    </main>
+    <footer class="rodape">
+        <div class="container">
+            <small>Newsletter <span id="ano"></span></small>
+        </div>
+    </footer>
 </body>
 </html>
